# WaterfowlDatasetScripts

./: Apply_split.py  DatasetProcess&Check.ipynb  FixData_H_I.py  README.md  WaterFowlDataset.py  anno_util.py  cust_transform.py  pyproject.toml  reduce_duplications.py  split_dataset.py
Data/Bird_H/: category.json
Split_data/: Bird_A_split_basedOn_altitude.json  Bird_A_split_basedOn_bbox.json  Bird_B_split_basedOn_altitude.json  Bird_B_split_basedOn_bbox.json  Bird_C_split_basedOn_altitude.json  Bird_C_split_basedOn_bbox.json  Bird_D_split_basedOn_bbox.json  Bird_E_split_basedOn_bbox.json  Bird_F_split_basedOn_altitude.json  Bird_F_split_basedOn_bbox.json  Bird_G_split_basedOn_altitude.json  Bird_G_split_basedOn_bbox.json  Bird_H_split_basedOn_altitude.json  Bird_H_split_basedOn_background_info.json  Bird_H_split_basedOn_bbox.json  Bird_H_split_basedOn_category.json  Bird_I_split_basedOn_altitude.json  Bird_I_split_basedOn_bbox.json  Bird_I_split_basedOn_category.json  Bird_J_split_basedOn_altitude.json  Bird_J_split_basedOn_bbox.json
src/WaterFowlTools/: Apply_split.py  Dataset.py  DatasetProcess&Check.ipynb  FixData_H_I.py  Pre_crop.py  Simulated_altitude.py  WriteTrainTestSplit.py  __init__.py  anno_util.py  cust_transform.py  mAp.py  split_dataset_classification.py  utils.py  visualize.py
src/WaterFowlTools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/WaterFowlTools_RobertTang/: WaterFowlDataset.py  cust_transform.py  split_dataset.py
src/WaterFowlTools_RobertTang.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
