[build-system]
requires = ["setuptools>=52.0"]
build-backend = "setuptools.build_meta"
[project]
name = "WaterFowlTools_RobertTang"
version = "0.0.1"
authors = [
  { name="Robert Tang", email="zt253@umsystem.edu" },
]
description = "WaterFowl Porjects Tools for ML"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/RobertTzc/WaterfowlDatasetScripts"
"Bug Tracker" = "https://github.com/RobertTzc/WaterfowlDatasetScripts/issues"